--- a/package.json
+++ b/package.json
@@ -25,10 +25,10 @@
 		"stylelint:fix": "stylelint css/*.css css/*.scss src/**/*.scss src/**/*.vue --fix"
 	},
 	"dependencies": {
-		"@nextcloud/axios": "^1.6.0",
+		"@nextcloud/axios": "^1.8.0",
 		"@nextcloud/dialogs": "^3.1.2",
-		"@nextcloud/router": "^1.2.0",
-		"@nextcloud/vue": "^4.1.0",
+		"@nextcloud/router": "^2.0.0",
+		"@nextcloud/vue": "^4.2.0",
 		"vue": "^2.6.14"
 	},
 	"browserslist": [
@@ -41,8 +41,8 @@
 	"devDependencies": {
 		"@nextcloud/babel-config": "^1.0.0",
 		"@nextcloud/browserslist-config": "^2.2.0",
-		"@nextcloud/eslint-config": "^6.1.0",
-		"@nextcloud/stylelint-config": "^1.0.0-beta.0",
-		"@nextcloud/webpack-vue-config": "^4.1.4"
+		"@nextcloud/eslint-config": "^6.1.1",
+		"@nextcloud/stylelint-config": "^2.0.1",
+		"@nextcloud/webpack-vue-config": "^4.2.0"
 	}
 }
