--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "cfgsharelinks",
+	"name": "cfg_share_links",
 	"description": "App adding the ability to specify share tokens",
 	"version": "1.0.1",
 	"author": "Filip Joska <filip@joska.dev>",
