--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         }
     ],
     "require": {
-      "ext-json": "*"
+      "ext-json": "*",
+      "php": ">=7.4 <=8.1"
     },
     "require-dev": {
         "phpunit/phpunit": "^8.5",
