--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,12 @@
 .idea
+.fleet
 *.iml
 /vendor/
 /build/
 node_modules/
 /.php_cs.cache
 js/*hot-update.*
+js
 .php-cs-fixer.cache
 release_signature
 cfg_share_links.tar.gz
