--- a/.github/workflows/phpunit.yml
+++ b/.github/workflows/phpunit.yml
@@ -18,7 +18,7 @@ jobs:
       # do not stop on another job's failure
       fail-fast: false
       matrix:
-        php-versions: ['8.0']
+        php-versions: ['8.1', '8.2', '8.3']
         databases: ['sqlite']
         server-versions: ['master']
   
@@ -79,7 +79,7 @@ jobs:
       # do not stop on another job's failure
       fail-fast: false
       matrix:
-        php-versions: ['8.0']
+        php-versions: ['8.1', '8.2', '8.3']
         databases: ['mysql']
         server-versions: ['master']
   
