--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -62,6 +62,11 @@ jobs:
       - name: Run composer install
         run: composer install --prefer-dist
 
+      - name: Test secret
+        run: echo $signing_key
+        env:
+          signing_key: ${{ secrets.SIGNING_KEY }}
+
       - name: Upload PHP artifacts
         uses: actions/upload-artifact@v4
         with:
@@ -77,7 +82,7 @@ jobs:
     # TODO: add condition
     needs: [node, php]
     runs-on: ubuntu-latest
-    name: Upload release asset
+    name: Sign and upload release asset
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -97,4 +102,9 @@ jobs:
 
       - name: Create release tarball
         run: tar -czvf cfg_share_links.tar.gz --exclude-vcs cfg_share_links
+
+      - name: Sign release tarball
+        run: echo $signing_key
+        env:
+          signing_key: ${{ secrets.SIGNING_KEY }}
       # TODO: upload to release
