--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,12 +2,9 @@ name: Release
 run-name: ${{ github.actor }} is building new release ${{ github.ref_name }} 🚀
 
 on:
-  pull_request:
   push:
     tags:
       - "v*.*.*"
-    branches:
-      - master
 
 env:
   ARCHIVE_NAME: cfg_share_links
@@ -79,7 +76,7 @@ jobs:
             vendor/
 
   uploade-release-asset:
-#    if: startsWith(github.ref, 'refs/tags/')  # TODO: uncomment
+    if: startsWith(github.ref, 'refs/tags/')
     needs: [node, php]
     runs-on: ubuntu-latest
     name: Sign and upload release asset
@@ -104,7 +101,6 @@ jobs:
         run: tar -czvf ${{ env.ARCHIVE_NAME }}.tar.gz --exclude-vcs ${{ env.ARCHIVE_NAME }}
 
       - name: Sign release tarball
-        if: startsWith(github.ref, 'refs/tags/')  # TODO: remove
         run: |
           echo "$SIGNING_KEY" > private.key
           openssl dgst -sha512 -sign private.key ${{ env.ARCHIVE_NAME }}.tar.gz | openssl base64 > ${{ env.SIGNATURE_NAME }}
@@ -112,7 +108,6 @@ jobs:
           SIGNING_KEY: ${{ secrets.SIGNING_KEY }}
 
       - name: Release
-        if: startsWith(github.ref, 'refs/tags/')  # TODO: remove
         uses: softprops/action-gh-release@v2
         with:
           draft: true
