--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,7 +11,30 @@ env:
   SIGNATURE_NAME: release_signature.base64
 
 jobs:
+  prepare-new-version:
+    if: startsWith(github.ref, 'refs/tags/')
+    runs-on: ubuntu-latest
+    name: Update changelog and app version
+    environment: release
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
+        with:
+          python-version: '3.12'
+      - run: python .github/release/prepare_release.py ${{ github.ref_name }}
+        env:
+          GITHUB_TOKEN: ${{ github.token }}
+      - name: Commit changes
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git add appinfo/info.xml CHANGELOG.md
+          git commit -S -m "Bump version"
+          git push
+
   node:
+    needs: [prepare-new-version]
     runs-on: ubuntu-latest
     name: Build and upload node artifacts
     steps:
@@ -48,6 +71,7 @@ jobs:
             img/
 
   php:
+    needs: [prepare-new-version]
     runs-on: ubuntu-latest
     name: Get and upload PHP artifacts
     steps:
