--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,6 +2,7 @@ name: Release
 run-name: ${{ github.actor }} is building new release ${{ github.ref_name }} 🚀
 
 on:
+  pull_request:
   push:
     tags:
       - "v*.*.*"
@@ -12,7 +13,7 @@ env:
 
 jobs:
   prepare-new-version:
-    if: startsWith(github.ref, 'refs/tags/')
+#    if: startsWith(github.ref, 'refs/tags/')
     runs-on: ubuntu-latest
     name: Update changelog and app version
     environment: release
