--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,6 +23,7 @@ jobs:
       - uses: actions/setup-python@v5
         with:
           python-version: '3.12'
+      - run: pip install -r .github/release/requirements.txt
       - run: python .github/release/prepare_release.py ${{ github.ref_name }}
         env:
           GITHUB_TOKEN: ${{ github.token }}
