--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,7 +32,7 @@ jobs:
           git config user.name "github-actions[bot]"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git add appinfo/info.xml CHANGELOG.md
-          git commit -S -m "Bump version"
+          git commit -m "Bump version"
           git push
 
   node:
