--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,7 +2,6 @@ name: Release
 run-name: ${{ github.actor }} is building new release ${{ github.ref_name }} 🚀
 
 on:
-  pull_request:  # TODO: remove
   push:
     tags:
       - "v*.*.*"
@@ -13,7 +12,7 @@ env:
 
 jobs:
   prepare-new-version:
-#    if: startsWith(github.ref, 'refs/tags/')
+    if: startsWith(github.ref, 'refs/tags/')
     runs-on: ubuntu-latest
     name: Update changelog and app version
     environment: release
@@ -22,22 +21,24 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-          ref: ${{github.event.pull_request.head.ref}}
-          repository: ${{github.event.pull_request.head.repo.full_name}}
+#          ref: ${{github.event.pull_request.head.ref}}
+#          repository: ${{github.event.pull_request.head.repo.full_name}}
       - uses: actions/setup-python@v5
         with:
           python-version: '3.12'
       - run: pip install -r .github/release/requirements.txt
-      - run: python .github/release/prepare_release.py v5.2.0
+      - run: python .github/release/prepare_release.py ${{ github.ref_name }}
         env:
           GITHUB_TOKEN: ${{ github.token }}
-      - name: Commit changes
+      - name: Commit changes and update tag
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git add appinfo/info.xml CHANGELOG.md
           git commit -m "Bump version"
           git push
+          git tag -f ${{ github.ref_name }}
+          git push origin -f --tags
 
   node:
     needs: [prepare-new-version]
