--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,8 +21,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-#          ref: ${{github.event.pull_request.head.ref}}
-#          repository: ${{github.event.pull_request.head.repo.full_name}}
+          ref: master
       - uses: actions/setup-python@v5
         with:
           python-version: '3.12'
