--- a/composer.json
+++ b/composer.json
@@ -15,13 +15,18 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^9.6",
-        "nextcloud/coding-standard": "^1.2.1"
+        "nextcloud/coding-standard": "^1.2.1",
+        "vimeo/psalm": "^5.26",
+        "bamarni/composer-bin-plugin": "^1.8"
     },
     "config": {
         "optimize-autoloader": true,
         "classmap-authoritative": true,
         "platform": {
             "php": "8.1"
+        },
+        "allow-plugins": {
+            "bamarni/composer-bin-plugin": true
         }
     },
     "scripts": {
