--- a/package.json
+++ b/package.json
@@ -26,10 +26,12 @@
 		"stylelint:fix": "stylelint css/*.css css/*.scss src/**/*.scss src/**/*.vue --fix"
 	},
 	"dependencies": {
+		"@nextcloud/auth": "^2.4.0",
 		"@nextcloud/axios": "^2.5.1",
 		"@nextcloud/dialogs": "^5.3.7",
 		"@nextcloud/l10n": "^3.1.0",
 		"@nextcloud/router": "^3.0.1",
+		"@nextcloud/sharing": "^0.2.3",
 		"@nextcloud/vue": "^8.19.0",
 		"vue": "^2.7.16",
 		"vue-material-design-icons": "^5.3.0"
