Fix settings and configure prettier

--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,7 +1,1 @@
-{
-  "trailingComma": "all",
-  "useTabs": true,
-  "semi": false,
-  "singleQuote": true,
-  "bracketSameLine": true
-}
+"@nextcloud/prettier-config"
