--- a/package.json
+++ b/package.json
@@ -47,9 +47,11 @@
 		"@nextcloud/babel-config": "^1.2.0",
 		"@nextcloud/browserslist-config": "^3.0.1",
 		"@nextcloud/eslint-config": "^8.4.1",
+		"@nextcloud/prettier-config": "^1.1.0",
 		"@nextcloud/stylelint-config": "^3.0.1",
 		"@nextcloud/vite-config": "^1.4.2",
 		"@vue/tsconfig": "^0.5.1",
+		"eslint-config-prettier": "^9.1.0",
 		"prettier": "^3.3.3",
 		"vite": "^5.4.8",
 		"vite-plugin-eslint": "^1.8.1",
